padding adjusted to fix too big gap

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,8 +16,8 @@ body {
   width: 450px;
   background-color: white;
   margin: 0 auto;
-  padding-top: 140px;
-  padding-bottom: 140px;
+  padding-top: 70px;
+  padding-bottom: 20px;
   height: auto;
 
 }
